fixed styling on mobile for roster page" ;

--- a/src/pages/roster/roster.css
+++ b/src/pages/roster/roster.css
@@ -108,6 +108,15 @@
   text-align: left;
 }
 
+@media screen and (max-width: 768px) {
+  .roster-main__header-container {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+    text-align: center;
+  }
+}
+  
+
 .article-link{
   padding-bottom: 2rem;
   font-family: 'Nunito', sans-serif;
